<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_action_globe"
            android:title="@string/show_map" />
        <item
            android:id="@+id/nav_landmark"
            android:icon="@drawable/ic_action_location"
            android:title="@string/view_landmark" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_action_tags"
            android:title="@string/view_category" />
        <!--
        <item android:id="@+id/nav_slideshow" android:icon="@android:drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item android:id="@+id/nav_manage" android:icon="@android:drawable/ic_menu_manage"
            android:title="Tools" />
            -->
    </group>
    <!--
    <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_share" android:icon="@android:drawable/ic_menu_share"
                android:title="Share" />
            <item android:id="@+id/nav_send" android:icon="@android:drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
    -->
</menu>