<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="ph.edu.upcebu.upcebumap.AddLandmarkActivity">

        <TextView
            android:id="@+id/labellandmark_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp"
            android:text="@string/landmark_name"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/landmark_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/labellandmark_name"
            android:layout_marginTop="30dp" />

        <TextView
            android:id="@+id/labelcategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_below="@+id/landmark_name"
            android:layout_marginTop="120dp"
            android:text="@string/view_category"
            android:textSize="18dp" />

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/labelcategory"
            android:layout_alignStart="@id/labelcategory"
            android:layout_below="@id/labelcategory"
            android:padding="@dimen/activity_vertical_margin" />

        <Button
            android:id="@+id/submit_landmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/spinnerCategory"
            android:layout_alignStart="@+id/spinnerCategory"
            android:layout_below="@+id/spinnerCategory"
            android:layout_marginTop="10dp"
            android:background="#EB1E26"
            android:padding="20dp"
            android:text="@string/submit"
            android:textColor="#ffffff" />

    </RelativeLayout>
</ScrollView>
